# flask-devops-ci-cd

./: README.md  appspec.yml  buildspec.yml  pyproject.toml
.circleci/: config.yml
app/: main.py
flask_devops_ci_cd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: install_dependencies.sh  start_app.sh  stop_app.sh
tests/: test_app.py
